--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+:root{
+  --primary-colore:#6f55f2;
+  --heading-colore:#132742;
+};
+body{
+  font-family: 'Times New Roman', Times, serif
+};
+ul{
+  list-style: none;
+};
+
+
+section{
+padding: 50px 60px;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.button{
+  background: var(--primary-colore);
+  color: #fff;
+  border: none;
+  border-radius:5px ;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1rem;
+  font-weight: 700;
+  outline:none;
+  padding: 7px 15px;
+  cursor: pointer;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
